# nuscape-backend

./: .env.example  .env.local  .gitignore  .replit  README.md  alembic.ini  dump.rdb  index.html  main.py  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  tailwind.config.ts  tmp_view.tsx  tsconfig.json  verify_tables.py  vite.config.ts  workspace_tree.txt
alembic/: env.py
alembic/versions/: 001_initial_migration.py  6419baa08b6c_add_rollup_tables_for_mvp.py  d1c3b89f3b2e_add_canonical_app_directory.py  e9f8d7c6b5a4_add_uq_usage_session.py  (+1 more)
android/: agent_snippets.kt  test_post_usage.kt
backend/: app_directory.py  app_seeds.py  auth.py  crud.py  database.py  main.py  metrics.py  models.py  policy_store.py  redis_client.py  rollups.py  routes_apps_alias.py  routes_usage_debug.py  routes_usage_desktop.py  routes_usage_summary.py  schemas.py  settings.py  settings.py.bak
dev/: backfill_canonical_ids.py  db_url.txt  run_backend.cmd  run_backend.cmd.bak  seed.py  tmp_alias_ids.py  tmp_apps_list.py  tmp_nulls.py  usage_columns.py
docs/: INTEGRATION.md  architecture.md  client_contract.md  rollup_operations.md  usage_tracking_reference.txt
logs/: backend.err  worker.err
processor/: worker.py
src/: App.tsx  main.tsx  styles.css  types.ts
tests/: conftest.py  test_app_directory.py  test_health.py
tools/: db_inspect.py  dedupe_usage_logs.py  push-usage.mjs  query_usage_logs.py  recreate_schema.py  run_rollups.py
windows-agent/: Cargo.toml  build.rs  tauri.conf.json
windows-agent/dnscrypt/win64/: dnscrypt-proxy.toml
windows-agent/resources/: config.json
windows-agent/src/: auth.rs  config.rs  main.rs  manager.rs  models.rs  runtime.rs  storage.rs  uploader.rs
windows-agent/src/collectors/: mod.rs  network.rs  sessions.rs  status.rs
(+25 files in other folders)
