[package]
name = "nuscape-agent-tauri"
version = "0.1.0"
edition = "2021"
description = "NuScape Agent (Tauri)"

[dependencies]
tauri = { version = "1", features = ["system-tray", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
anyhow = "1"
thiserror = "1"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
futures = "0.3"
serde_with = { version = "3", features = ["chrono_0_4"] }
windows = { version = "0.57", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_System_Power",
    "Win32_System_Time",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_Security",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis"
] }

[build-dependencies]
tauri-build = "1"
